Link to food index from user profile page

--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -13,6 +13,7 @@
   {% if may_edit_users %}
   <li><a href="{% url "userlist" %}">Add or remove users</a></li>
   {% endif %}
+  <li><a href="{% url "tillmenu-index" %}">Edit the food menu</a></li>
 </ul>
 
 {% endblock %}
