--- a/templates/registration/userlist.html
+++ b/templates/registration/userlist.html
@@ -37,6 +37,6 @@
   <input type="submit" value="Add new user" />
 </form>
 
-<p><a href="/">Back to till</a></p>
+<p><a href="{% url "tillweb-pubroot" %}">Back to till</a></p>
 
 {% endblock %}
