--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -8,6 +8,7 @@
 
 <p>You are now logged out.</p>
 
-<p><a href="{% url "login-page" %}">Log in again</a>.</p>
+<p><a href="{% url "login-page" %}">Log in again</a></p>
+<p><a href="{% url "frontpage" %}">Back to front page</a></p>
 
 {% endblock %}
