--- a/static-dist/display.css
+++ b/static-dist/display.css
@@ -2,19 +2,50 @@
 
 @charset "UTF-8";
 
+@import fonts.css;
+
 body {
-    margin:0px;
-    padding:0px;
-    font-family: helvetica, sans-serif;
-    font-size: 20px;
-    color:#fff;
-    background-color:black;
-    width: 100%;
-    text-align: center;
+	background: #020021 url( /static/bg.png ) no-repeat;
+	background-size: contain;
+	color: white;
+	font-size: 12pt;
+	font-family: Raleway, sans-serif;
+	margin: 2.5em;
+	padding: 0;
 }
 
 header {
-    font-family: helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 30px;
+	background: url( /static/logo.png ) no-repeat;
+	background-size: contain;
+	display: table;
+	width: 100%;
+	height: 5%;
+	min-height: 7em;
+	margin-bottom: 2.5%;
+}
+
+header div {
+	display: table-cell;
+	text-align: center;
+}
+
+header div h1 {
+	text-align: center;
+	font-size: 2.5em;
+}
+
+main table {
+	font-size: 20pt;
+	line-height: 1.5;
+	width: 100%;
+	border-spacing: 0;
+}
+
+main table thead th {
+	text-align: left;
+	border-bottom: 1pt solid #5f1539;
+}
+
+main table tbody tr:nth-child(odd) {
+	background-color: rgba( 255, 255, 255, .1 );
 }
