--- a/templates/display.html
+++ b/templates/display.html
@@ -1,22 +1,21 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>{% block title %}EMF 2018{% endblock %}</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-{% block style %}
-    <link rel="STYLESHEET" type="text/css" href="{% static "display.css" %}">
-{% endblock %}
-{% block jquery %}
-{% endblock %}
-  </head>
-  <body>
-    <header>{% block header %}Header{% endblock %}
-    </header>
-    <nav>{% block nav %}{% endblock %}
-    </nav>
-    <main>{% block content %}{% endblock %}
-    </main>
-    <footer>{% block footer %}{% endblock %}
-  </body>
+	<head>
+		<title>{% block title %}EMF 2018{% endblock %}</title>
+		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+		{% block style %}
+			<link rel="STYLESHEET" type="text/css" href="{% static "display.css" %}">
+		{% endblock %}
+		{% block jquery %}
+		{% endblock %}
+	</head>
+	<body>
+		<header>
+			<div>
+				<h1>{% block header %}Header{% endblock %}</h1>
+			</div>
+		</header>
+		<main>{% block content %}{% endblock %}</main>
+	</body>
 </html>
