Split on-tap into three sections

--- a/templates/display-cans-and-bottles.html
+++ b/templates/display-cans-and-bottles.html
@@ -27,9 +27,9 @@
 				<td>{{ t.manufacturer }} {{ t.name }}</td>
 				<td>{{ t.abv }}%</td>
 				<td>£{{ t.saleprice }}/{{ t.unit.name }}</td>
-				{% if t.remaining < 5.0 %}
+				{% if t.remaining <= 5.0 %}
 					<td>Last few</td>
-				{% elif t.remaining < 24.0 %}
+				{% elif t.remaining <= 10.0 %}
 					<td>Low</td>
 				{% else %}
 					<td>Plenty</td>
