--- a/templates/display-on-tap.html
+++ b/templates/display-on-tap.html
@@ -20,19 +20,44 @@
 				<th>Stock status</th>
 			</tr>
 		</thead>
-		<tbody>
-		  <tr><th>Real Ales</th><td></td><td></td><td></td></tr>
-		  {% with ales as lines %}
-		  {% include "ontap-lines.html" %}
-		  {% endwith %}
-		  <tr><th>Keg taps</th><td></td><td></td><td></td></tr>
-		  {% with kegs as lines %}
-		  {% include "ontap-lines.html" %}
-		  {% endwith %}
-		  <tr><th>Ciders</th><td></td><td></td><td></td></tr>
-		  {% with ciders as lines %}
-		  {% include "ontap-lines.html" %}
-		  {% endwith %}
-		</tbody>
+
+		{% if ales %}
+			<thead class="sub">
+				<tr>
+					<th colspan="4">Real Ales</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% with ales as lines %}
+					{% include "ontap-lines.html" %}
+				{% endwith %}
+			</tbody>
+		{% endif %}
+
+		{% if kegs %}
+			<thead class="sub">
+				<tr>
+					<th colspan="4">Keg Taps</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% with kegs as lines %}
+					{% include "ontap-lines.html" %}
+				{% endwith %}
+			</tbody>
+		{% endif %}
+
+		{% if ciders %}
+			<thead class="sub">
+				<tr>
+					<th colspan="4">Ciders</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% with ciders as lines %}
+					{% include "ontap-lines.html" %}
+				{% endwith %}
+			</tbody>
+		{% endif %}
 	</table>
 {% endblock %}
