Add query to calculate alcohol usage

--- a/templates/whatson.html
+++ b/templates/whatson.html
@@ -19,6 +19,9 @@ entirely by volunteers!  Want to help out?  Follow this link!</a></p>
 <p>We have been open for {{info.time_passed}} out of {{info.length}}.  That's {{info.completed_pct}}%.</p>
 <p>We should have consumed {{info.expected_consumption}} out of {{info.total_consumption}} booze.  That's {{info.expected_consumption_pct}}%.</p>
 
+<p>We've actually consumed {{alcohol_used}} out of {{total_alcohol}}ml
+alcohol.</p>
+
 <h1>What's on sale right now?</h1>
 
 {% if lines %}
