Add a percentage alcohol used variable to display progress page

--- a/templates/display-progress.html
+++ b/templates/display-progress.html
@@ -15,5 +15,5 @@
 <p>We should have consumed {{info.expected_consumption}} out of {{info.total_consumption}} booze.  That's {{info.expected_consumption_pct}}%.</p>
 
 <p>We've actually consumed {{alcohol_used}} out of {{total_alcohol}}ml
-alcohol.</p>
+alcohol.  That's {{alcohol_used_pct}}%.</p>
 {% endblock %}
