--- a/templates/whatson.html
+++ b/templates/whatson.html
@@ -27,17 +27,9 @@ entirely by volunteers!  Want to help out?  Follow this link!</a></p>
 
 <h1>Event progress</h1>
 
-<p>Based on current time of {{info.now}}</p>
-<p>Bar is currently {% if info.open %}open{% else %}closed{% endif %}.</p>
-{% if info.open %}
-<p>Bar closes at {{info.closes_at}}.</p>
-{% endif %}
-<p>Bar next opens at {{info.next_open}}.</p>
-<p>We have been open for {{info.time_passed}} out of {{info.length}}.  That's {{info.completed_pct}}%.</p>
-<p>We should have consumed {{info.expected_consumption}} out of {{info.total_consumption}} booze.  That's {{info.expected_consumption_pct}}%.</p>
-
-<p>We've actually consumed {{alcohol_used}} out of {{total_alcohol}}ml
-alcohol.  That's {{alcohol_used_pct}}%.</p>
+<div>
+	{% include "charts.html" %}
+</div>
 
 <h1>What's on the bar right now?</h1>
 {% comment %}This was copy-and-pasted from display-on-tap.html - perhaps
