Club Mate display page - needs fuel gauges adding!

--- a/templates/whatson.html
+++ b/templates/whatson.html
@@ -95,7 +95,7 @@ it should go in an include file instead?{% endcomment %}
 <ul>
   <li><a href="{% url "display-cans-and-bottles" %}">Cans and bottles</a></li>
   <li><a href="{% url "display-wines-and-spirits" %}">Wines and spirits</a></li>
-  <li>Club Mate and Mate Tea</li>
+  <li><a href="{% url "display-club-mate" %}">Club Mate</a> and Mate Tea</li>
   <li>Soft drinks</li>
 </ul>
 
