Add soft drinks display

--- a/templates/whatson.html
+++ b/templates/whatson.html
@@ -96,7 +96,7 @@ it should go in an include file instead?{% endcomment %}
   <li><a href="{% url "display-cans-and-bottles" %}">Cans and bottles</a></li>
   <li><a href="{% url "display-wines-and-spirits" %}">Wines and spirits</a></li>
   <li><a href="{% url "display-club-mate" %}">Club Mate</a> and Mate Tea</li>
-  <li>Soft drinks</li>
+  <li><a href="{% url "display-soft-drinks" %}">Soft drinks</a></li>
 </ul>
 
 <h1>What's powering this?</h1>
