improvements mostly to homepage

--- a/static-dist/bargraph.css
+++ b/static-dist/bargraph.css
@@ -16,8 +16,7 @@
 }
 
 .bar {
-	background-color: #fc41a2;
-	background: url( '/static/pink-animated.gif' );
+	background: url( '/static/ltr-light-bar.gif' );
 	background-size: 100%;
 	overflow: hidden;
 	border-radius: 10em;
@@ -25,7 +24,11 @@
 	text-align: center;
 	position: absolute;
 	top: 0;
-	left: 0;;
+	left: 0;
+}
+.bar.remaining {
+	background: url( '/static/rtl-light-bar.gif' );
+	background-size: 100%;
 }
 
 .bar span {
@@ -35,15 +38,17 @@
 }
 
 .marker {
-	background: url( '/static/dark-animated.gif' );
+	background: url( '/static/ltr-dark-bar.gif' );
 	background-size: 100%;
-	-webkit-transform: scaleX(-1);
-	transform: scaleX(-1);
 	height: inherit;
 	text-align: center;
 	font-size: 1em;
-	border-left: 0.25em solid white;
+	border-right: 0.25em solid white;
 	position: absolute;
 	top: 0;
-	left: 0;;
+	left: 0;
+}
+.marker.remaining {
+	background: url( '/static/rtl-dark-bar.gif' );
+	background-size: 100%;
 }
