--- a/templates/whatson.html
+++ b/templates/whatson.html
@@ -24,101 +24,55 @@
 entirely by volunteers!  Want to help out?  Follow this link!</a></p>
 
 
+<div class="split">
+    <div>
+        <h1>Event progress</h1>
+        <div>
+        	{% include "charts.html" %}
+        </div>
+    </div>
 
-<h1>Event progress</h1>
-
-<div>
-	{% include "charts.html" %}
+    <div>
+        <h1>What's on the bar right now?</h1>
+        {% include 'ales.html' %}
+    </div>
 </div>
 
-<h1>What's on the bar right now?</h1>
-{% comment %}This was copy-and-pasted from display-on-tap.html - perhaps
-it should go in an include file instead?{% endcomment %}
-	<table>
-		<colgroup>
-			<col width="50%" />
-			<col width="16.66%" />
-			<col width="16.66%" />
-			<col width="16.66%" />
-		</colgroup>
-		<thead>
-			<tr>
-				<th>Name</th>
-				<th>ABV</th>
-				<th>Price</th>
-				<th>Stock status</th>
-			</tr>
-		</thead>
+<div class="split">
+    <div>
+        <h1>What else does the bar sell?</h1>
 
-		{% if ales %}
-			<thead class="sub">
-				<tr>
-					<th colspan="4">Real Ales</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% with ales as lines %}
-					{% include "ontap-lines.html" %}
-				{% endwith %}
-			</tbody>
-		{% endif %}
+        <ul>
+          <li><a href="{% url "display-cans-and-bottles" %}">Cans and bottles</a></li>
+          <li><a href="{% url "display-wines-and-spirits" %}">Wines and spirits</a></li>
+          <li><a href="{% url "display-club-mate" %}">Club Mate</a> and Mate Tea</li>
+          <li><a href="{% url "display-soft-drinks" %}">Soft drinks</a></li>
+        </ul>
+    </div>
+    
+    <div>
+        <h1>What's powering this?</h1>
 
-		{% if kegs %}
-			<thead class="sub">
-				<tr>
-					<th colspan="4">Keg Taps</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% with kegs as lines %}
-					{% include "ontap-lines.html" %}
-				{% endwith %}
-			</tbody>
-		{% endif %}
+        <p>The tills are run using free software.</p>
+        <ul>
+          <li><a href="https://github.com/sde1000/quicktill">The till software</a></li>
+          <li><a href="https://github.com/sde1000/tillweb">This web service ("emf" branch)</a></li>
+          <li><a href="https://www.screenly.io/ose/">The display boards</a> fetch web pages like <a href="/display/on-tap.html">https://bar.emfcamp.org/display/on-tap.html</a></li>
+        </ul>
 
-		{% if ciders %}
-			<thead class="sub">
-				<tr>
-					<th colspan="4">Ciders</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% with ciders as lines %}
-					{% include "ontap-lines.html" %}
-				{% endwith %}
-			</tbody>
-		{% endif %}
-	</table>
+        <p>Pull requests welcome!  If you improve the web service, your
+        changes may be made live during EMF!</p>
 
-<h1>What else does the bar sell?</h1>
-
-<ul>
-  <li><a href="{% url "display-cans-and-bottles" %}">Cans and bottles</a></li>
-  <li><a href="{% url "display-wines-and-spirits" %}">Wines and spirits</a></li>
-  <li><a href="{% url "display-club-mate" %}">Club Mate</a> and Mate Tea</li>
-  <li><a href="{% url "display-soft-drinks" %}">Soft drinks</a></li>
-</ul>
-
-<h1>What's powering this?</h1>
-
-<p>The tills are run using free software.</p>
-<ul>
-  <li><a href="https://github.com/sde1000/quicktill">The till software</a></li>
-  <li><a href="https://github.com/sde1000/tillweb">This web service ("emf" branch)</a></li>
-  <li><a href="https://www.screenly.io/ose/">The display boards</a> fetch web pages like <a href="/display/on-tap.html">https://bar.emfcamp.org/display/on-tap.html</a></li>
-</ul>
-
-<p>Pull requests welcome!  If you improve the web service, your
-changes may be made live during EMF!</p>
-
-<p>A simple JSON interface is available:</p>
-<ul>
-  <li><a href="{% url "locations-json" %}">http://bar.emfcamp.org{% url "locations-json" %}</a>
-  lists the groups of stock that are on sale at the moment</li>
-  <li>http://bar.emfcamp.org/location/[name].json lists stock on sale in a
-  location, for example the <a href="{% url "location-json" "Bar" %}">Bar</a> location</li>
-  <li><a href="{% url "stock-json" %}">http://bar.emfcamp.org{% url "stock-json" %}</a> lists everything we have left in stock.</li>
-  <li><a href="{% url "progress-json" %}">http://bar.emfcamp.org{% url "progress-json" %}</a> compares how much we've actually drunk with what we predicted before the event...</li>
-</ul>
+        <p>A simple JSON interface is available:</p>
+        <ul>
+          <li><a href="{% url "locations-json" %}">http://bar.emfcamp.org{% url "locations-json" %}</a>
+          lists the groups of stock that are on sale at the moment</li>
+          <li>http://bar.emfcamp.org/location/[name].json lists stock on sale in a
+          location, for example the <a href="{% url "location-json" "Bar" %}">Bar</a> location</li>
+          <li><a href="{% url "stock-json" %}">http://bar.emfcamp.org{% url "stock-json" %}</a> lists everything we have left in stock.</li>
+          <li><a href="{% url "progress-json" %}">http://bar.emfcamp.org{% url "progress-json" %}</a> compares how much we've actually drunk with what we predicted before the event...</li>
+        </ul>
+    </div>
+</div>
 
 {% endblock %}
