--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
   <head>
     <title>{% block title %}tillweb{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 {% block style %}
     <link rel="STYLESHEET" type="text/css" href="{% static "style.css" %}">
 {% endblock %}
