--- a/templates/display-club-mate.html
+++ b/templates/display-club-mate.html
@@ -8,10 +8,14 @@
 
 <p><strong>Also available in cases!</strong></p>
 
-<p>This should be a fuel gauge display...</p>
-
-{% for st, remaining, total, remain_pct in mate %}
-<p>{{st.manufacturer}} {{st.name}}: remaining {{remaining}}, total {{total}}, remaining {{remain_pct}}%, sells for £{{st.saleprice}}</p>
-{% endfor %}
+<div class="screen">
+    {% for st, remaining, total, remain_pct in mate %}
+        <h2>{{st.manufacturer}} {{st.name}}</h2>
+        <p>{{st.manufacturer}} {{st.name}} sells for £{{st.saleprice}}.</p>
+        <div class="bargraph" style="margin-bottom: 2.5em;">
+        	<div class="bar remaining" style="width:{{remain_pct}}%;"><span>{{remain_pct|stringformat:"0.1f"}}%</span></div>
+        </div>
+    {% endfor %}
+</div>
 
 {% endblock %}
