Fixed link to web service GitHub repo

--- a/templates/whatson.html
+++ b/templates/whatson.html
@@ -56,7 +56,7 @@ entirely by volunteers!  Want to help out?  Follow this link!</a></p>
         <p>The tills are run using free software.</p>
         <ul>
           <li><a href="https://github.com/sde1000/quicktill">The till software</a></li>
-          <li><a href="https://github.com/sde1000/tillweb">This web service ("emf" branch)</a></li>
+          <li><a href="https://github.com/sde1000/quicktill-tillweb/tree/emf">This web service ("emf" branch)</a></li>
           <li><a href="https://www.screenly.io/ose/">The display boards</a> fetch web pages like <a href="/display/on-tap.html">https://bar.emfcamp.org/display/on-tap.html</a></li>
         </ul>
 
